# learn-hatch

./: .gitignore  LICENSE  SIR_model_script.py  pyproject.toml
src/harrymueller_epi_models/: SIR.py  __init__.py  __main__.py  utils.py
